Add assertion.  Bug 382199, r+sr=dbaron