layout/generic/nsBlockFrame.cpp
@@ -4739,6 +4739,11 @@ nsBlockFrame::AddFrames(nsIFrame* aFrameList,
   // structures to fit.
   nsIFrame* newFrame = aFrameList;
   while (newFrame) {
+    NS_ASSERTION(newFrame->GetType() != nsGkAtoms::placeholderFrame ||
+                 (!newFrame->GetStyleDisplay()->IsAbsolutelyPositioned() &&
+                  !newFrame->GetStyleDisplay()->IsFloating()),
+                 "Placeholders should not float or be positioned");
+
     PRBool isBlock = newFrame->GetStyleDisplay()->IsBlockOutside();
 
     // If the frame is a block frame, or if there is no previous line or if the
